Fix broken versioning

--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,13 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "${mc_version}-${mod_version}"
-if (mod_build != "")
+version_alt = "${mod_version}"
+
+if (mod_build != "") {
     version = "${mc_version}-${mod_version}-${mod_build}"
+    version_alt = "${mod_version}-${mod_build}"
+}
+
 group = "net.insomniakitten.mvillage"
 archivesBaseName = "mvillage"
 
@@ -41,7 +46,7 @@ minecraft {
 processResources {
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info', 'pack.mcmeta'
-        expand  'build_version': "${mod_version}-${mod_build}",
+        expand  'build_version': "${version_alt}",
                 'mcf_version': "${mc_version}-${forge_version}"
     }
 
