--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,10 @@ mod_build=indev
 
 mc_version=1.12
 forge_version=14.21.1.2387
-mcp_mappings=snapshot_20170704
+mcp_mappings=snapshot_20170722
+
+ctm_version=0.2.0.3
+jei_version=4.7.2.77
 
 compat_version=1.8
 
