Begin the inevitable rewrite of everything boilerplate

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,7 @@
-mod_version=0.0.1
-mod_build=indev
+modVersion=1.0.0
+mcVersion=1.12.1
+mcfVersion=14.22.0.2467
+mcpMappings=snapshot_20170831
 
-mc_version=1.12
-forge_version=14.21.1.2387
-mcp_mappings=snapshot_20170722
-
-ctm_version=0.2.0.3
-jei_version=4.7.2.77
-
-compat_version=1.8
-
-build_dir=../compiled
+ctmVersion=0.2.2.7
+jeiVersion=4.7.8.91
