--- a/build.gradle
+++ b/build.gradle
@@ -1,67 +1,37 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            name = "forge"
-            url = "https://files.minecraftforge.net/maven"
-        }
+        maven { name = 'forge'; url = 'https://files.minecraftforge.net/maven' }
     }
     dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply from: 'dependencies.gradle'
 
-version = "${mc_version}-${mod_version}"
-def version_alt = "${mod_version}"
-
-if (mod_build != "") {
-    version = "${mc_version}-${mod_version}-${mod_build}"
-    version_alt = "${mod_version}-${mod_build}"
-}
-
+version = "${mcVersion}-${modVersion}"
 group = "net.insomniakitten.mvillage"
 archivesBaseName = "mvillage"
 
-sourceCompatibility = compat_version
-targetCompatibility = compat_version
-
-libsDirName = build_dir
-distsDirName = build_dir
-
-compileJava {
-    sourceCompatibility = compat_version
-    targetCompatibility = compat_version
-}
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 minecraft {
-    version = "${mc_version}-${forge_version}"
-    mappings = mcp_mappings
-    runDir = "run"
+    version = "${mcVersion}-${mcfVersion}"
+    mappings = mcpMappings
+    runDir = 'run'
 
-    replace '%mod_version%', mod_version
-    replace '%mc_version%', mc_version
-    replace '%ctm_version%', ctm_version
-}
-
-repositories {
-    maven { url = "http://maven.tterrag.com/" }
-    maven { url = "http://dvs1.progwml6.com/files/maven" }
-}
-
-dependencies {
-    compile "team.chisel.ctm:CTM:MC${mc_version}-${ctm_version}"
-    runtime "team.chisel.ctm:CTM:MC${mc_version}-${ctm_version}"
-    deobfCompile "mezz.jei:jei_${mc_version}:${jei_version}:api"
-    runtime "mezz.jei:jei_${mc_version}:${jei_version}"
+    replace '%MODVERSION%', modVersion
+    replace '%CTMVERSION%', ctmVersion
 }
 
 processResources {
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info', 'pack.mcmeta'
-        expand  'build_version': version_alt,
-                'mcf_version': mc_version
+        expand  'mod_version': modVersion,
+                'mc_version': mcVersion
     }
 
     from(sourceSets.main.resources.srcDirs) {
